--- a/MODULO CSS/assets/css/styles3.css
+++ b/MODULO CSS/assets/css/styles3.css
@@ -32,3 +32,20 @@ img.ovni {
     color: green;
     font-size: 50px;
 }
+
+
+.btn-wasap {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    margin: 10px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+}
+
+.ovni-0 {
+    position: relative;
+    left: 30px;
+    top: 40px;
+}
